update common/common.scss: update style for fix style bug on firefox

--- a/common/common.scss
+++ b/common/common.scss
@@ -188,7 +188,7 @@ input {
 
 // remove left sidebar on new asktug homepage
 #main-outlet-wrapper {
-  grid-template-columns: none !important; // var(--d-sidebar-width) minmax(0, 1fr);
+  grid-template-columns: 0 minmax(0, 1fr) !important; // var(--d-sidebar-width) minmax(0, 1fr);
   gap: 0 !important; // 0 2em;
   padding-left: unset !important;
 }
